--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "geist": "1.2.2",
+    "lucide-react": "^0.474.0",
     "next": "^14.2.23",
     "next-mdx-remote": "^4.4.1",
     "postcss": "^8.5.1",
