--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "18.2.19",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
+    "clsx": "^2.1.1",
     "geist": "1.2.2",
     "lucide-react": "^0.474.0",
     "next": "^14.2.23",
@@ -21,6 +22,7 @@
     "react-dom": "18.2.0",
     "remark-gfm": "^4.0.0",
     "sugar-high": "^0.6.1",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "4.0.0-alpha.13",
     "typescript": "5.3.3"
   }
